--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ h1{
     color:darkgreen
 }
 body{
-    background-image: url(B03.png)
+    background-image: url(401.png)
 }
 a{
     color: #0645AD;
